# Xbox-Mode-Steamless-Controller

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASE_NOTES_v1.4.2.md  plan.md
.github/workflows/: ci.yml  update-sdl.yml  update-virtualbus.yml
LICENSES/: original-steamlesscontroller-mit.txt
cmake/: SDLVersion.cmake  VirtualBusVersions.cmake
gamebar/SteamControllerRemapperWidget/: App.xaml  App.xaml.cs  IpcClient.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  README.md  SteamControllerRemapperWidget.csproj  WidgetPage.xaml  WidgetPage.xaml.cs
gamebar/SteamControllerRemapperWidget/BundleArtifacts/: Build-SideloadBundle.ps1  Install-SteamControllerRemapper.cmd  Install-SteamControllerRemapper.ps1  README.md  arm64.txt  x64.txt  x86.txt
gamebar/SteamControllerRemapperWidget/GameBar/: widget.txt
gamebar/SteamControllerRemapperWidget/Properties/: AssemblyInfo.cs  Default.rd.xml
resources/: InnoInstallerScript.iss
scripts/: Update-SdlVersion.ps1  Update-VirtualBusDeps.ps1
src/: main.cpp
src/app/: ControllerManager.cpp  ControllerManager.h  MacroRecorder.cpp  MacroRecorder.h  PaddleConfigWindow.cpp  PaddleConfigWindow.h  PaddleOverlay.cpp  PaddleOverlay.h  RemapBackend.cpp  RemapBackend.h  RemapIpcServer.cpp  RemapIpcServer.h  SdlGamepadInput.cpp  SdlGamepadInput.h  StandardGamepadState.h  TrackpadMouse.cpp  TrackpadMouse.h  TrayApp.cpp  TrayApp.h  VirtualController.cpp  VirtualController.h  main.cpp
src/hid/: HidDevice.cpp  HidDevice.h
src/logging/: Log.h
src/steam/: SteamController.cpp  SteamController.h
